walls added, movement fixed, added second sprite sheet, and made changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <script src="/DirectionInput.js"></script>
     <script src="/Overworld.js"></script>
     <script src="/GameObject.js"></script>
+    <script src="/Hero.js"></script>
     <script src="/Person.js"></script>
     <script src="/Sprite.js"></script>
+    <script src="/HeroSprite.js"></script>
     <script src="/OverworldMap.js"></script>
     <script src="/init.js"></script>
 </body>
