--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero of Capstone</title>
-    <link href="/style.css" rel="stylesheet">
+    <link href="/styles/global.css" rel="stylesheet">
+    <link href="/styles/TextMessage.css" rel="stylesheet">
+    <link href="/styles/SceneTransition.css" rel="stylesheet">
 </head>
 <body>
     <div class="game-container">
@@ -24,6 +26,10 @@
     <script src="/HeroSprite.js"></script>
     <script src="/OverworldMap.js"></script>
     <script src="/OverworldEvent.js"></script>
+    <script src="/TextMessage.js"></script>
+    <script src="/KeyPressListener.js"></script>
+    <script src="/RevealingText.js"></script>
+    <script src="/SceneTransition.js"></script>
     <script src="/init.js"></script>
 </body>
 </html>
