battle system in place, working on turns

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="/styles/global.css" rel="stylesheet">
     <link href="/styles/TextMessage.css" rel="stylesheet">
     <link href="/styles/SceneTransition.css" rel="stylesheet">
+    <link href="/styles/Battle.css" rel="stylesheet">
+    <link href="/styles/Combatant.css" rel="stylesheet">
+    <link href="/styles/SubmissionMenu.css" rel="stylesheet">
+    <link href="/styles/Team.css" rel="stylesheet">
 </head>
 <body>
     <div class="game-container">
@@ -15,6 +19,9 @@
 
         </canvas>
     </div>
+    <!--Content-->
+<script src="/Content/Heros.js"></script>
+
     <!--Scripts-->
     <script src="/utils.js"></script>
     <script src="/DirectionInput.js"></script>
@@ -30,6 +37,14 @@
     <script src="/KeyPressListener.js"></script>
     <script src="/RevealingText.js"></script>
     <script src="/SceneTransition.js"></script>
+
+    <!-- Battle Scripts-->
+    <script src="/Battle/Battle.js"></script>
+    <script src="/Battle/Combatant.js"></script>
+    <script src="/Battle/SubmissionMenu.js"></script>
+    <script src="/Battle/Team.js"></script>
+
+
     <script src="/init.js"></script>
 </body>
 </html>
