--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </canvas>
     </div>
     <!--Content-->
-<script src="/Content/Heros.js"></script>
+<script src="/Content/Characters.js"></script>
+<script src="/Content/Actions.js"></script>
 
     <!--Scripts-->
     <script src="/utils.js"></script>
@@ -43,6 +44,9 @@
     <script src="/Battle/Combatant.js"></script>
     <script src="/Battle/SubmissionMenu.js"></script>
     <script src="/Battle/Team.js"></script>
+    <script src="/Battle/BattleEvent.js"></script>
+    <script src="/Battle/TurnCycle.js"></script>
+    <script src="/Battle/BattleAnimations.js"></script>
 
 
     <script src="/init.js"></script>
