combat menu works and player can submit choices, MVP reached?

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="/styles/Combatant.css" rel="stylesheet">
     <link href="/styles/SubmissionMenu.css" rel="stylesheet">
     <link href="/styles/Team.css" rel="stylesheet">
+    <link href="/styles/KeyboardMenu.css" rel="stylesheet">
 </head>
 <body>
     <div class="game-container">
@@ -38,6 +39,7 @@
     <script src="/KeyPressListener.js"></script>
     <script src="/RevealingText.js"></script>
     <script src="/SceneTransition.js"></script>
+    <script src="/KeyboardMenu.js"></script>
 
     <!-- Battle Scripts-->
     <script src="/Battle/Battle.js"></script>
